# bot-smm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  upgrade.md
docs/spec/: mini-app.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  telegram.ts  types.ts
frontend/src/components/: AnimatedNumber.tsx  BottomNav.tsx  Delta.tsx  EmptyState.tsx  ErrorView.tsx  Layout.tsx  PostCard.tsx  RankRow.tsx  ReactionChips.tsx  SegmentedControl.tsx  Skeleton.tsx  Sparkline.tsx  Spinner.tsx  StatusBadge.tsx  icons.tsx
frontend/src/hooks/: useApi.ts  useBackButton.ts
frontend/src/pages/: Channel.tsx  Dashboard.tsx  PostDetail.tsx  Posts.tsx  Reactions.tsx
frontend/src/utils/: format.ts
scripts/: backfill_from_tg_export.py
src/: config.py  main.py  scheduler.py
src/adminbot/: bot.py
src/agent/: news_agent.py  pricing.py  prompts.py  schemas.py
src/bot/: handlers.py  keyboards.py  middleware.py  reactions.py
src/media/: og_image.py
src/storage/: db.py  repo.py  text_utils.py
src/utils/: tg_format.py
src/webapp/: auth.py  deps.py  server.py
src/webapp/routes/: channel.py  health.py  me.py  posts.py  reactions.py
