[project]
name = "smm-bot"
version = "0.1.0"
description = "Telegram SMM bot — генератор постов по AI/tech новостям через Claude + web_search"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "anthropic>=0.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "aiosqlite>=0.20",
    "loguru>=0.7",
    "pillow>=10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
